@@ -1,3 +1,8 @@
+2001-05-10  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpd/refclock_oncore.c (oncore_msg_any): We don't always have
+	GETTIMEOFDAY().
+
 2001-05-09  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* ntpd/refclock_shm.c (shm_poll): Apply JAN_1970 correction after
